change all images to openjdk